<resources>
    <string name="app_name">BrainStorm</string>
    <string name="title1">BrainStörming</string>
    <string name="title2">Merlin</string>
    <string name="title3">Gandalf</string>
    <string name="title4">Harry</string>
    <string name="title5">Houdini</string>
    <string name="title6">SuppaHirn</string>
    <string name="title7">SupraHirni</string>
    <string name="title8">NonoGram</string>
    <string name="title8o">NG</string>
    <string name="title8a">5x5</string>
    <string name="title8b">6x6</string>
    <string name="title8c">&#160;&#160;&#160;7x7&#160;&#160;&#160;</string>
    <string name="title8d">8x8</string>
    <string name="title8e">9x9</string>
    <string name="title8f">&#160;10x10&#160;</string>
    <string name="title9">Das ist es</string>
    <string name="title10">&#160;&#160;&#160;Sudo&#160;&#160;Kuh&#160;&#160;&#160;</string>
    <string name="title10o">SK</string>
    <string name="title10a">3*3</string>
    <string name="title10b">9*9</string>
    <string name="titleNone"></string>
    <string name="title11">Solitär - Halma</string>
    <string name="title11o">SH</string>
    <string name="title12">Memory</string>
    <string name="title13">Pos-I-Tron</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b10">10</string>
    <string name="b11">11</string>
    <string name="b12">12</string>
    <string name="b13">13</string>
    <string name="b14">14</string>
    <string name="b15">15</string>
    <string name="b16">16</string>
    <string name="b17">17</string>
    <string name="b18">18</string>
    <string name="b19">19</string>
    <string name="b20">20</string>
    <string name="b21">21</string>
    <string name="b22">22</string>
    <string name="b23">23</string>
    <string name="b24">24</string>
    <string name="b25">25</string>
    <string name="txt">Ausgabe</string>
    <string name="Mischa">Mischen</string>
    <string name="Mischa2">Neu-Mischen</string>
    <string name="AnLeit">Anleitung</string>
    <string name="Warte">Hit me.</string>
    <string name="NeuStart">Neu Start</string>
    <string name="Zuge">Züge:</string>
    <string name="Punkte">Punkte:</string>
    <string name="Loesung"></string>
    <string name="neuSt">Neu Start</string>
    <string name="AnleitZauber">
        Merlin, Gandalf, Harry, Houdini\n\nKomplette fläche muss grün sein.\n
        Durch anklicken wird derienige und die in der Umgebung, nach einem bestimmten muster geändert.
    </string>
    <string name="AnleitSuppa">
        SuppaHirn, SupraHirni\n\nEs gilt die farben herauszufinden.\n
        Einfaches MasterMind sprich Superhirn.
    </string>
    <string name="AnleitNonoG">
        Nonogram\n\nEs gilt das muster herauszufinden.\n
        Die zahlen am rand geben an, wieviele punkte ohne leerraum gesetzt sind.\n\n
        bsp.: 1-1-1 = RgRgR / 2-2 = RRgRR\n1-1 = RgRgg oder gRgRg oder ggRgR
    </string>
    <string name="AnleitSudoK">
        SudoKuh\n\nIst wohl keine anleitung nötig.\nEinfach nur Sudoku.\nZahlen von 1 bis 9 so verteile
        n das keine 2 identische ziffern horizontal, vertikal oder in einem 9ner block sind.
    </string>
    <string name="AnleitSoli">
        Solitär-Halma\n\nübersprungene stecker werden vom spielfeld entfernt, bis am ende kein weiterer sprung mehr möglich ist. gewonnen hat man, wenn nur noch 1 stecker auf dem spielfeld verbleibt.
    </string>
    <string name="AnleitMemo">
        Memory\n\nFinde 2 gleiche und die Niete.\n\nNiete zum ersten mal gefunden +2 Punkte, jedes weitere mal 1 Punkt abzug.\n
        Jedesmal wenn nach einem Treffer ein erneuter Treffer folgt gibt es einen Punkt mehr. Kein Treffer gibt 1 Punkt abzug.
    </string>
    <string name="AnleitPIT">
        Pos-I-Tron\n\nOrdne alles so an das weder Horizontal noch vertikal, form und farbe doppelt vorkommt.
    </string>

</resources>