<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MemoryActivity">

    <TextView
        android:id="@+id/Kopf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/title12"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <RelativeLayout
        android:id="@+id/butty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Kopf"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/b1"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pics"
            android:tag="@string/b1"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b1"
            android:background="@drawable/pics"
            android:tag="@string/b2"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b2"
            android:background="@drawable/pics"
            android:tag="@string/b3"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b4"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b3"
            android:background="@drawable/pics"
            android:tag="@string/b4"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b5"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b4"
            android:background="@drawable/pics"
            android:tag="@string/b5"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b6"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b1"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pics"
            android:tag="@string/b6"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b7"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b2"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b6"
            android:background="@drawable/pics"
            android:tag="@string/b7"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b8"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b3"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b7"
            android:background="@drawable/pics"
            android:tag="@string/b8"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b9"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b4"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b8"
            android:background="@drawable/pics"
            android:tag="@string/b9"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b10"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b5"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b9"
            android:background="@drawable/pics"
            android:tag="@string/b10"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b11"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b6"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pics"
            android:tag="@string/b11"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b12"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b7"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b11"
            android:background="@drawable/pics"
            android:tag="@string/b12"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b13"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b8"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b12"
            android:background="@drawable/pics"
            android:tag="@string/b13"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b14"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b9"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b13"
            android:background="@drawable/pics"
            android:tag="@string/b14"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b15"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b10"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b14"
            android:background="@drawable/pics"
            android:tag="@string/b15"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b16"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b11"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pics"
            android:tag="@string/b16"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b17"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b12"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b16"
            android:background="@drawable/pics"
            android:tag="@string/b17"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b18"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b13"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b17"
            android:background="@drawable/pics"
            android:tag="@string/b18"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b19"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b14"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b18"
            android:background="@drawable/pics"
            android:tag="@string/b19"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b20"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b15"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b19"
            android:background="@drawable/pics"
            android:tag="@string/b20"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b21"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b16"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pics"
            android:tag="@string/b21"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b22"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b17"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b21"
            android:background="@drawable/pics"
            android:tag="@string/b22"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b23"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b18"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b22"
            android:background="@drawable/pics"
            android:tag="@string/b23"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b24"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b19"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b23"
            android:background="@drawable/pics"
            android:tag="@string/b24"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/b25"
            android:layout_width="@dimen/ButX"
            android:layout_height="@dimen/ButY"
            android:layout_below="@id/b20"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/b24"
            android:background="@drawable/pics"
            android:tag="@string/b25"
            android:text=""
            android:textSize="34sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="de.eyesonly5x5.brainstorm.MischButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/butty"
        android:gravity="center"
        android:tag="Memory"
        tools:layout="@layout/misch_button" />

</RelativeLayout>