<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="io.github.eyesonly5x5.MainActivity"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/popUPs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

    <TextView
        android:id="@+id/btn0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_0"
        android:layout_marginBottom="@dimen/Space"
        android:text="@string/b0"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn0"
        android:background="@drawable/btn_1"
        android:layout_marginBottom="@dimen/Space"
        android:text="@string/b1"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:background="@drawable/btn_2"
        android:layout_marginBottom="@dimen/Space"
        android:text="@string/b2"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>